# ComfyUI-IF_LLM

./: .gitignore  .ruff.toml  HF_api.py  IFDisplayOmniNode.py  IFDisplayTextNode.py  IFDisplayTextWildcardNode.py  IFJoinTextNode.py  IFLLMDisplayOmniNode.py  IFLLMDisplayTextNode.py  IFLLMJoinTextNode.py  IFLLMLoadImagesNodeS.py  IFLLMNode.py  IFLLMSaveTextNode.py  IFLLMTextTyperNode.py  IFLoadImagesNodeS.py  IFSaveTextNode.py  IFTextTyperNode.py  LINTING_ISSUES.txt  ListModelsNode.py  __init__.py  agent_tool.py  anthropic_api.py  conftest.py  deepseek_api.py  gemini_api.py  groq_api.py  huggingface_api.py  kobold_api.py  llamacpp_api.py  lms_api.py  mistral_api.py  ollama_api.py  omost.py  openai_api.py  pyproject.toml  requirements.txt  send_request.py  test_input_defaults.py  textgen_api.py  transformers_api.py  (+3 more)
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-31-fix-image-utils-tests.md
if_llm/: __init__.py  constants.py  gemini2_utils.py  image_utils.py  model_utils.py  node.py  node_core.py  node_registry.py  settings_utils.py  text_utils.py  utils.py
if_llm/providers/: base.py  connection_pool.py  message_helpers.py  models_config.py  protocol.py
lib_omost/: canvas.py  greedy_encode.py  utils.py
tests/: conftest.py
tests/integration/: test_send_request.py
tests/unit/: test_connection_pool.py  test_constants.py  test_image_utils.py  test_message_builders.py  test_message_helpers.py  test_models_config.py  test_protocol.py  test_send_request_logging.py  test_utils.py
